--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Smart India Hackathon </title>
 
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="https://akshdesai1.github.io/Hackathon-23/index.css">
 </head>
 
 <body>
@@ -29,28 +29,28 @@
             </div>
 
             <div class="newChat">
-                <img src="/assets/Add Icon.png" alt="">
+                <img src="https://akshdesai1.github.io/Hackathon-23/assets/Add Icon.png" alt="">
                 <p> Start a new chat </p>
             </div>
 
             <div class="button-section">
                 <div class="btn item-1">
-                    <img src="/assets/button-section.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-2">
-                    <img src="/assets/button-section.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-3">
-                    <img src="/assets/button-section.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-4">
-                    <img src="/assets/button-section.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-5">
                     <img src="/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-6">
-                    <img src="/assets/button-section.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
 
             <div class="cc-Heading">
                 <div class="image">
-                    <img src="/assets/welcome-image.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/welcome-image.png" alt="">
                 </div>
 
                 <div class="cc-text">
