Modifications in Chat Container TextArea Positioning

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="text">
-                    <p class="companyName"> Antoine Piedanna </p>
+                    <p class="companyName"> <a href=""> Antoine Piedanna</a> </p>
                     <p class="companyId"> Company ID </p>
                 </div>
 
@@ -118,7 +118,8 @@
             </div>
 
             <div class="textarea-section">
-
+                <input type="text" class="textbox" placeholder="Example : “Summarise this Paper for me ”">
+                <button class="icon-button">&#128269;</button>
             </div>
         </div>
     </div>
