Add Connection of images and css link with github

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="text">
-                    <p class="companyName"> <a href=""> Antoine Piedanna</a> </p>
+                    <p class="companyName"> Antoine Piedanna </p>
                     <p class="companyId"> Company ID </p>
                 </div>
 
@@ -47,7 +47,7 @@
                     <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-5">
-                    <img src="/assets/button-section.png" alt="">
+                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
                 </div>
                 <div class="btn item-6">
                     <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
@@ -109,7 +109,7 @@
 
                 <div class="f-item">
                     <div class="figure">
-                        <img src="/assets/cloud-offline-functionallity.png" alt="">
+                        <img src="https://akshdesai1.github.io/Hackathon-23/assets/cloud-offline-functionallity.png" alt="">
                     </div>
                     <div class="title"> Works Offline </div>
                     <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
