--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
                 <div class="f-item">
                     <div class="figure">
-                        <img src="https://akshdesai1.github.io/Hackathon-23/assets/cloud-offline-functionallity.png" alt="">
+                        <img src="https://akshdesai1.github.io/Hackathon-23/assets/cloud-offline-functionallity.png"
+                            alt="">
                     </div>
                     <div class="title"> Works Offline </div>
                     <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
@@ -119,7 +120,19 @@
 
             <div class="textarea-section">
                 <input type="text" class="textbox" placeholder="Example : “Summarise this Paper for me ”">
-                <button class="icon-button">&#128269;</button>
+                <button class="icon-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                        viewBox="0 0 20 20" fill="none">
+                        <g clip-path="url(#clip0_29_242)">
+                            <path
+                                d="M3.16667 17.0707L17.7083 10.8374C18.3833 10.5457 18.3833 9.59573 17.7083 9.30407L3.16667 3.07073C2.61667 2.82907 2.00833 3.2374 2.00833 3.82907L2 7.67073C2 8.0874 2.30833 8.44573 2.725 8.49573L14.5 10.0707L2.725 11.6374C2.30833 11.6957 2 12.0541 2 12.4707L2.00833 16.3124C2.00833 16.9041 2.61667 17.3124 3.16667 17.0707Z"
+                                fill="#E5E5E5" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_29_242">
+                                <rect width="20" height="20" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg></button>
             </div>
         </div>
     </div>
