--- a/index.html
+++ b/index.html
@@ -2,140 +2,187 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Smart India Hackathon </title>
-
-    <link rel="stylesheet" href="https://akshdesai1.github.io/Hackathon-23/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Smart India Hackathon </title>
+  <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
-    <div class="container">
+  <div class="container">
 
-        <div class="sidebar">
-            <div class="heading">
+    <div class="sidebar">
+      <div class="heading">
 
-                <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="41" viewBox="0 0 40 41" fill="none">
-                        <circle cx="20" cy="20.5" r="20" fill="#191D88" />
-                    </svg>
-                </div>
-
-                <div class="text">
-                    <p class="companyName"> Antoine Piedanna </p>
-                    <p class="companyId"> Company ID </p>
-                </div>
-
-            </div>
-
-            <div class="newChat">
-                <img src="https://akshdesai1.github.io/Hackathon-23/assets/Add Icon.png" alt="">
-                <p> Start a new chat </p>
-            </div>
-
-            <div class="button-section">
-                <div class="btn item-1">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
-                </div>
-                <div class="btn item-2">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
-                </div>
-                <div class="btn item-3">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
-                </div>
-                <div class="btn item-4">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
-                </div>
-                <div class="btn item-5">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
-                </div>
-                <div class="btn item-6">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/button-section.png" alt="">
-                </div>
-            </div>
-
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="41" viewBox="0 0 40 41" fill="none">
+            <circle cx="20" cy="20.5" r="20" fill="#191D88" />
+          </svg>
         </div>
 
-        <div class="chat-container">
-
-            <div class="cc-Heading">
-                <div class="image">
-                    <img src="https://akshdesai1.github.io/Hackathon-23/assets/welcome-image.png" alt="">
-                </div>
-
-                <div class="cc-text">
-                    <p> Welcome to </p>
-                    <div> Intranet Chatbot </div>
-
-                </div>
-
-            </div>
-
-            <div class="functionallity">
-
-                <div class="f-item">
-                    <div class="figure">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path
-                                d="M12.2206 15.2118L12.2189 15.2147C11.9317 15.6723 11.6964 16.1214 11.5152 16.5618C10.9694 15.229 9.93046 13.8205 8.3623 12.6441C7.70933 12.1516 7.03757 11.7589 6.35552 11.4783C8.01601 10.8088 9.55307 9.60074 10.6106 8.06691C10.9825 7.52959 11.2853 6.9878 11.5128 6.43246C12.1337 7.95297 13.3483 9.4305 14.8407 10.4867C15.4219 10.9001 16.024 11.2367 16.6432 11.4878C14.9048 12.2234 13.1775 13.7018 12.2206 15.2118Z"
-                                stroke="#191D88" stroke-width="1.5" />
-                            <path
-                                d="M4.80682 6.44722L4.80682 6.44722L4.80563 6.4491C4.69179 6.63054 4.59247 6.81014 4.50835 6.9878C4.18992 6.31467 3.6472 5.62355 2.86827 5.03922C2.57595 4.81875 2.27581 4.63411 1.97037 4.48956C2.8029 4.10916 3.56382 3.484 4.10019 2.70606C4.25883 2.47687 4.39499 2.24545 4.50676 2.00949C4.86867 2.77499 5.49325 3.50201 6.24322 4.03278C6.4987 4.21452 6.76218 4.36956 7.03252 4.4952C6.14656 4.92226 5.29499 5.67683 4.80682 6.44722Z"
-                                stroke="#191D88" />
-                        </svg>
-                    </div>
-                    <div class="title"> Clear and precise </div>
-                    <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
-                </div>
-
-                <div class="f-item">
-                    <div class="figure">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <g clip-path="url(#clip0_29_256)">
-                                <path
-                                    d="M9.99994 7.5C8.15827 7.5 7.49994 8.15833 7.49994 10C7.49994 11.8417 8.15819 12.5 9.99986 12.5C11.8415 12.5 12.4999 11.8417 12.4999 10C12.4999 8.15833 11.8416 7.5 9.99994 7.5ZM17.4499 9.16666C17.0665 5.69166 14.3082 2.93333 10.8332 2.55V0.833328H9.16652V2.55C5.69152 2.93333 2.93319 5.69166 2.54986 9.16666H0.833191V10.8333H2.54986C2.93319 14.3083 5.69152 17.0667 9.16652 17.45V19.1667H10.8332V17.45C14.3082 17.0667 17.0665 14.3083 17.4499 10.8333H19.1665V9.16666H17.4499ZM9.99986 15.8333C6.77486 15.8333 4.16652 13.225 4.16652 10C4.16652 6.775 6.77486 4.16666 9.99986 4.16666C13.2249 4.16666 15.8332 6.775 15.8332 10C15.8332 13.225 13.2249 15.8333 9.99986 15.8333Z"
-                                    fill="#191D99" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_29_256">
-                                    <rect width="20" height="20" fill="white" />
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </div>
-                    <div class="title"> Personalized answers </div>
-                    <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
-                </div>
-
-                <div class="f-item">
-                    <div class="figure">
-                        <img src="https://akshdesai1.github.io/Hackathon-23/assets/cloud-offline-functionallity.png"
-                            alt="">
-                    </div>
-                    <div class="title"> Works Offline </div>
-                    <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
-                </div>
-
-            </div>
-
-            <div class="textarea-section">
-                <input type="text" class="textbox" placeholder="Example : “Summarise this Paper for me ”">
-                <button class="icon-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                        viewBox="0 0 20 20" fill="none">
-                        <g clip-path="url(#clip0_29_242)">
-                            <path
-                                d="M3.16667 17.0707L17.7083 10.8374C18.3833 10.5457 18.3833 9.59573 17.7083 9.30407L3.16667 3.07073C2.61667 2.82907 2.00833 3.2374 2.00833 3.82907L2 7.67073C2 8.0874 2.30833 8.44573 2.725 8.49573L14.5 10.0707L2.725 11.6374C2.30833 11.6957 2 12.0541 2 12.4707L2.00833 16.3124C2.00833 16.9041 2.61667 17.3124 3.16667 17.0707Z"
-                                fill="#E5E5E5" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_29_242">
-                                <rect width="20" height="20" fill="white" />
-                            </clipPath>
-                        </defs>
-                    </svg></button>
-            </div>
+        <div class="text">
+          <p class="companyName"> Smart India - Hackathon </p>
+          <p class="companyId"> admin </p>
+          <a href="/logout"> Logout </a>
         </div>
+
+      </div>
+
+      <div class="newChat">
+        <img src="/assets/Add-Icon.png" alt="">
+        <p> Start a new chat </p>
+      </div>
+
+      <div class="button-section">
+        <div class="btn item-1">
+          <?xml version="1.0" encoding="UTF-8"?>
+          <svg width="800px" height="800px" viewBox="0 0 28 28" version="1.1" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+            <title>ic_fluent_news_28_regular</title>
+            <desc>Created with Sketch.</desc>
+            <g id="🔍-Product-Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="ic_fluent_news_28_regular" fill="#212121" fill-rule="nonzero">
+                <path
+                  d="M22.75,24 L5.25,24 C3.51696854,24 2.10075407,22.6435452 2.00514479,20.9344239 L2,20.75 L2,6.25 C2,5.05913601 2.92516159,4.08435508 4.09595119,4.00519081 L4.25,4 L19.75,4 C20.940864,4 21.9156449,4.92516159 21.9948092,6.09595119 L22,6.25 L22,7 L23.75,7 C24.940864,7 25.9156449,7.92516159 25.9948092,9.09595119 L26,9.25 L26,20.75 C26,22.4830315 24.6435452,23.8992459 22.9344239,23.9948552 L22.75,24 L5.25,24 L22.75,24 Z M5.25,22.5 L22.75,22.5 C23.6681734,22.5 24.4211923,21.7928897 24.4941988,20.8935272 L24.5,20.75 L24.5,9.25 C24.5,8.87030423 24.2178461,8.55650904 23.8517706,8.50684662 L23.75,8.5 L22,8.5 L22,19.25 C22,19.6296958 21.7178461,19.943491 21.3517706,19.9931534 L21.25,20 C20.8703042,20 20.556509,19.7178461 20.5068466,19.3517706 L20.5,19.25 L20.5,6.25 C20.5,5.87030423 20.2178461,5.55650904 19.8517706,5.50684662 L19.75,5.5 L4.25,5.5 C3.87030423,5.5 3.55650904,5.78215388 3.50684662,6.14822944 L3.5,6.25 L3.5,20.75 C3.5,21.6681734 4.20711027,22.4211923 5.10647279,22.4941988 L5.25,22.5 L22.75,22.5 L5.25,22.5 Z M10.2465274,13.0034726 C10.9368834,13.0034726 11.4965274,13.5631166 11.4965274,14.2534726 L11.4965274,17.75 C11.4965274,18.4403559 10.9368834,19 10.2465274,19 L6.75,19 C6.05964406,19 5.5,18.4403559 5.5,17.75 L5.5,14.2534726 C5.5,13.5631166 6.05964406,13.0034726 6.75,13.0034726 L10.2465274,13.0034726 Z M14.25,17.5 L17.7461806,17.5 C18.1603942,17.5 18.4961806,17.8357864 18.4961806,18.25 C18.4961806,18.6296958 18.2140267,18.943491 17.8479512,18.9931534 L17.7461806,19 L14.25,19 C13.8357864,19 13.5,18.6642136 13.5,18.25 C13.5,17.8703042 13.7821539,17.556509 14.1482294,17.5068466 L14.25,17.5 L17.7461806,17.5 L14.25,17.5 Z M9.99652744,14.5034726 L7,14.5034726 L7,17.5 L9.99652744,17.5 L9.99652744,14.5034726 Z M14.25,13.0034726 L17.7461806,13.0034726 C18.1603942,13.0034726 18.4961806,13.339259 18.4961806,13.7534726 C18.4961806,14.1331683 18.2140267,14.4469635 17.8479512,14.4966259 L17.7461806,14.5034726 L14.25,14.5034726 C13.8357864,14.5034726 13.5,14.1676861 13.5,13.7534726 C13.5,13.3737768 13.7821539,13.0599816 14.1482294,13.0103192 L14.25,13.0034726 L17.7461806,13.0034726 L14.25,13.0034726 Z M6.24639584,8.49665793 L17.7461806,8.49665793 C18.1603942,8.49665793 18.4961806,8.83244437 18.4961806,9.24665793 C18.4961806,9.6263537 18.2140267,9.94014889 17.8479512,9.98981132 L17.7461806,9.99665793 L6.24639584,9.99665793 C5.83218228,9.99665793 5.49639584,9.66087149 5.49639584,9.24665793 C5.49639584,8.86696217 5.77854972,8.55316697 6.14462528,8.50350455 L6.24639584,8.49665793 L17.7461806,8.49665793 L6.24639584,8.49665793 Z"
+                  id="🎨-Color">
+
+                </path>
+              </g>
+            </g>
+          </svg>
+        </div>
+        <div class="btn item-2">
+          <img src="assets/button-section.png" alt="">
+        </div>
+        <div class="btn item-3">
+          <img src="assets/button-section.png" alt="">
+        </div>
+        <div class="btn item-4">
+          <img src="assets/button-section.png" alt="">
+        </div>
+        <div class="btn item-5">
+          <img src="assets/button-section.png" alt="">
+        </div>
+        <div class="btn item-6">
+          <img src="assets/button-section.png" alt="">
+        </div>
+      </div>
+
     </div>
+
+    <div class="chat-container">
+
+      <div class="cc-Heading">
+        <div class="image">
+          <img src="assets/welcome-image.png" alt="">
+        </div>
+
+        <div class="cc-text">
+          <p> Welcome to </p>
+          <div> Intranet Chatbot </div>
+
+        </div>
+
+      </div>
+
+      <!-- <div class="functionallity">
+
+        <div class="f-item">
+          <div class="figure">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path
+                d="M12.2206 15.2118L12.2189 15.2147C11.9317 15.6723 11.6964 16.1214 11.5152 16.5618C10.9694 15.229 9.93046 13.8205 8.3623 12.6441C7.70933 12.1516 7.03757 11.7589 6.35552 11.4783C8.01601 10.8088 9.55307 9.60074 10.6106 8.06691C10.9825 7.52959 11.2853 6.9878 11.5128 6.43246C12.1337 7.95297 13.3483 9.4305 14.8407 10.4867C15.4219 10.9001 16.024 11.2367 16.6432 11.4878C14.9048 12.2234 13.1775 13.7018 12.2206 15.2118Z"
+                stroke="#191D88" stroke-width="1.5" />
+              <path
+                d="M4.80682 6.44722L4.80682 6.44722L4.80563 6.4491C4.69179 6.63054 4.59247 6.81014 4.50835 6.9878C4.18992 6.31467 3.6472 5.62355 2.86827 5.03922C2.57595 4.81875 2.27581 4.63411 1.97037 4.48956C2.8029 4.10916 3.56382 3.484 4.10019 2.70606C4.25883 2.47687 4.39499 2.24545 4.50676 2.00949C4.86867 2.77499 5.49325 3.50201 6.24322 4.03278C6.4987 4.21452 6.76218 4.36956 7.03252 4.4952C6.14656 4.92226 5.29499 5.67683 4.80682 6.44722Z"
+                stroke="#191D88" />
+            </svg>
+          </div>
+          <div class="title"> Clear and precise </div>
+          <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
+        </div>
+
+        <div class="f-item">
+          <div class="figure">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <g clip-path="url(#clip0_29_256)">
+                <path
+                  d="M9.99994 7.5C8.15827 7.5 7.49994 8.15833 7.49994 10C7.49994 11.8417 8.15819 12.5 9.99986 12.5C11.8415 12.5 12.4999 11.8417 12.4999 10C12.4999 8.15833 11.8416 7.5 9.99994 7.5ZM17.4499 9.16666C17.0665 5.69166 14.3082 2.93333 10.8332 2.55V0.833328H9.16652V2.55C5.69152 2.93333 2.93319 5.69166 2.54986 9.16666H0.833191V10.8333H2.54986C2.93319 14.3083 5.69152 17.0667 9.16652 17.45V19.1667H10.8332V17.45C14.3082 17.0667 17.0665 14.3083 17.4499 10.8333H19.1665V9.16666H17.4499ZM9.99986 15.8333C6.77486 15.8333 4.16652 13.225 4.16652 10C4.16652 6.775 6.77486 4.16666 9.99986 4.16666C13.2249 4.16666 15.8332 6.775 15.8332 10C15.8332 13.225 13.2249 15.8333 9.99986 15.8333Z"
+                  fill="#191D99" />
+              </g>
+              <defs>
+                <clipPath id="clip0_29_256">
+                  <rect width="20" height="20" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+          <div class="title"> Personalized answers </div>
+          <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
+        </div>
+
+        <div class="f-item">
+          <div class="figure">
+            <img src="{% static 'assets/cloud-offline-functionallity.png' %}" alt="">
+          </div>
+          <div class="title"> Works Offline </div>
+          <div class="description"> Pariatur sint laborum cillum aute consectetur irure. </div>
+        </div>
+
+      </div>
+       -->
+      <div class="chat">
+        <div class="user-chat">
+          <strong style="color: blue;"> <i> User:- </i> </strong> How can i drive car ?
+        </div>
+
+        <div class="machine-chat">
+          <strong style="color: green;"> Machine:- </strong>
+          <div class="pr">Learning how to d
+            1. Get a learner's permit: Before you can start .
+            2. Take driving lessons: It is highly recommended to take professional driving lessons from a certified
+            instructor. They can provide valuable feedback on your driving skills and help you identify areas for
+            improvement.
+            3. Practice, practice, practice: The more you practice, the better you will get. Try to spend at least an
+            hour driving every day. Focus on improving any weak areas such as parallel parking or negotiating turns.
+            4. Familiarize yourself with your vehicle: Get to know your car's features and capabilities. Understand how
+            it handles in different road conditions, such as wet or icy roads.
+            5. Follow traffic rules: Obey all traffic laws, including speed limits, stop signs, and red lights. Always
+            wear a seatbelt and avoid distractions like using your phone while driving.
+            6. Get comfortable with driving: Once you feel confident enough to drive on your own, start taking short
+            trips around your neighborhood. Gradually increase the distance and duration of your drives as you gain
+            experience.
+            7. Take a driver's test: When you feel ready, schedule a driver's test at the DMV. This will assess your
+            driving skills and determine if you are eligible to receive a driver's license.
+            By following these tips and putting in the effort, you can successfully learn how to drive a car and become
+            a safe and responsible driver.
+          </div>
+        </div>
+
+
+      </div>
+
+
+      <form class="textarea-section" method="post">
+        <input type="text" name="userChat" class="textbox" placeholder="Example : “Summarise this Paper for me ”">
+        <button type="submit" class="icon-button"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+            viewBox="0 0 20 20" fill="none">
+            <g clip-path="url(#clip0_29_242)">
+              <path
+                d="M3.16667 17.0707L17.7083 10.8374C18.3833 10.5457 18.3833 9.59573 17.7083 9.30407L3.16667 3.07073C2.61667 2.82907 2.00833 3.2374 2.00833 3.82907L2 7.67073C2 8.0874 2.30833 8.44573 2.725 8.49573L14.5 10.0707L2.725 11.6374C2.30833 11.6957 2 12.0541 2 12.4707L2.00833 16.3124C2.00833 16.9041 2.61667 17.3124 3.16667 17.0707Z"
+                fill="#E5E5E5" />
+            </g>
+            <defs>
+              <clipPath id="clip0_29_242">
+                <rect width="20" height="20" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+        </button>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
