--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Smart India Hackathon </title>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="https://akshdesai1.github.io/Hackathon-23/index.css">
 </head>
 
 <body>
@@ -29,28 +29,28 @@
       </div>
 
       <div class="newChat">
-        <img src="/assets/Add Icon.png" alt="">
+        <img src="https://akshdesai1.github.io/Hackathon-23/assets/Add Icon.png" alt="">
         <p> Start a new chat </p>
       </div>
 
       <div class="button-section">
         <a class="btn item-1">
-          <img src="/assets/btn-1.png" alt="">
+          <img src="https://akshdesai1.github.io/Hackathon-23/assets/btn-1.png" alt="">
         </a>
         <a class="btn item-2" >
-          <img src="/assets/btn-2.png" alt="">
+          <img src="https://akshdesai1.github.io/Hackathon-23/assets/btn-2.png" alt="">
         </a>
         <a class="btn item-3" href="/news">
-          <img src="/assets/btn-3.png" alt="">
+          <img src="https://akshdesai1.github.io/Hackathon-23/assets/btn-3.png" alt="">
         </a>
         <div class="btn item-4">
-          <img src="/assets/btn-4.png" alt="">
+          <img src="https://akshdesai1.github.io/Hackathon-23/assets/btn-4.png" alt="">
         </div>
         <div class="btn item-5">
-          <img src="/assets/btn-5.png" alt="">
+          <img src="https://akshdesai1.github.io/Hackathon-23/assets/btn-5.png" alt="">
         </div>
         <div class="btn item-6">
-          <img src="/assets/btn-6.png" alt="">
+          <img src="https://akshdesai1.github.io/Hackathon-23/assets/btn-6.png" alt="">
         </div>
       </div>
 
